# nav2_config

./: .gitignore  BACKLOG.md  BUILD_GUIDE.md  CLAUDE.md  LICENSE  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ci.yaml
docs/: compare-history.md  installation.md  lifecycle-management.md  remote-robot.md  troubleshooting.md  yaml-round-trip.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
nav2_config/: __init__.py  main.py  node.py
nav2_config/core/: __init__.py  config_diff.py  config_file.py  frame_discovery.py  health_check.py  history_manager.py  lifecycle_client.py  node_discovery.py  param_client.py  param_watcher.py  presets.py  robot_mode_detector.py  service_caller.py  topic_discovery.py  yaml_exporter.py  yaml_importer.py
nav2_config/gui/: __init__.py  compare_panel.py  health_panel.py  history_panel.py  icons.py  import_export.py  inspector_panel.py  load_dialog.py  main_window.py  node_panel.py  param_panel.py  preset_dialog.py  theme.py  yaml_panel.py
nav2_config/schema/: __init__.py  nav2_params.json  plugins.json
nav2_config/types/: __init__.py  history.py  params.py
resource/: nav2_config.desktop
test/: test_config_diff.py  test_config_file.py  test_history_manager.py  test_lifecycle_client_thread_safety.py  test_lifecycle_live.py  test_live_params.py  test_main_window_integration.py  test_namespace_discovery.py  test_node_fetch_error.py  test_param_client.py  test_param_client_live.py  test_post_set_actions.py  test_schema.py  test_yaml_exporter.py
(+12 files in other folders)
